2010-03-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/base.h: Fix "unused parameter" warnings for GCC.

2010-03-26 Chris Morley

	* src/obmolecformat.cpp: Make --separate work with multiple input
	  molecules. Fixes #2961144

2010-03-23 Chris Morley
	
	Segregate the molecules that failed inchiwrite so that there are
	no failures using Samples.txt but all fail with SamplesFail.txt.
	Similarly with SamplesTechManFail.txt. The majority of failures
	are stereochemistry.
	 
	* include/openbabel/alias.h, src/alias.cpp: reorganize the error
	messages in ExpandAlias. 

	* src/formats/mdlformat.cpp: changes in description so GUI displays
	options better.

2010-03-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/obmolecformat.h, src/ops/unique.cpp: Fix
	unordered_map compile problems on Mac. Even Apple's GCC-4.2 has
	strange errors. For now, use regular std::map with APPLE_GCC.

2010-03-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/gaussformat.cpp: Use ESP charges if available from
	the calculation. Fixes PR#2871242 as suggested by Tapani Kinnunen.

2010-03-18 Chris Morley

	* src/atom.cpp (GetImplicitValence): add [H] as a special case.
	Cannot use IMPVAL [H] 1 in atomtyp.txt because there is an infinite
	loop. Fixes #2972355.

	* src/ops/unique.cpp: using std::tr1::unordered_map; is needed for 
	Visual Studio build also.

2010-03-18  David Lonie  <loniedavid@gmail.com>

	* test/unitcell.cpp, test/files/unitcell.txt,
	test/files/unitcell_results.txt: Added coordinate transformations
	tests to unit cell tests.

2010-03-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefielduff.cpp: Patch from Philipp Rumpf to
	fix 5-coordinate axial atom detection. Also fix PR#2971473 for
	planar SO3 molecules. Additional fixes to handle other hypervalent
	cases, including 7-coordinate pentagonal bipyramidal.

	* include/openbabel/atom.h: Explain new hybridization values